objects/Rebrand_Reflag__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_for_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description># 11441703</description>
        <label>Assigned for Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_for_Review__c</fullName>
        <label>Assigned for Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Harish Arora</fullName>
                </value>
                <value>
                    <fullName>Bishnu Singh</fullName>
                </value>
                <value>
                    <fullName>Deepshikha Sharma</fullName>
                </value>
                <value>
                    <fullName>Akash Tiwari</fullName>
                </value>
                <value>
                    <fullName>Swati Gautam</fullName>
                </value>
                <value>
                    <fullName>Tanuj Shrivastava</fullName>
                </value>
                <value>
                    <fullName>Vishav Garg</fullName>
                </value>
                <value>
                    <fullName>Akriti Puri</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Sweta Nanda</fullName>
                </value>
                <value>
                    <fullName>Amrita Kaur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_for_implementation__c</fullName>
        <label>Assigned for implementation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payal Sharma (Finance)</fullName>
                </value>
                <value>
                    <fullName>Kritika Chaturvedi</fullName>
                </value>
                <value>
                    <fullName>Virender Yadav</fullName>
                </value>
                <value>
                    <fullName>Avneet Kaur</fullName>
                    <isActive>false</isActive>
                    <label>Avneet Kaur</label>
                </value>
                <value>
                    <fullName>Disha Shah</fullName>
                    <isActive>false</isActive>
                    <label>Disha Shah</label>
                </value>
                <value>
                    <fullName>Himanshi Chawla</fullName>
                    <isActive>false</isActive>
                    <label>Himanshi Chawla</label>
                </value>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                    <isActive>false</isActive>
                    <label>Prachi Tanwar</label>
                </value>
                <value>
                    <fullName>Rajeev Sahni</fullName>
                    <isActive>false</isActive>
                    <label>Rajeev Sahni</label>
                </value>
                <value>
                    <fullName>Samridhi Rathi</fullName>
                    <isActive>false</isActive>
                    <label>Samridhi Rathi</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description># 11441703</description>
        <label>Cancellation Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Brand_FROM__c</fullName>
        <label>Old Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accor</fullName>
                </value>
                <value>
                    <fullName>AC Hotels by Marriott</fullName>
                </value>
                <value>
                    <fullName>Adagio</fullName>
                </value>
                <value>
                    <fullName>Adam's Mark Hotels</fullName>
                </value>
                <value>
                    <fullName>Affinia</fullName>
                </value>
                <value>
                    <fullName>African Pride Hotels</fullName>
                </value>
                <value>
                    <fullName>Allegro</fullName>
                </value>
                <value>
                    <fullName>All Seasons</fullName>
                </value>
                <value>
                    <fullName>aloft</fullName>
                </value>
                <value>
                    <fullName>a loft</fullName>
                </value>
                <value>
                    <fullName>Americas Best value Inn</fullName>
                </value>
                <value>
                    <fullName>AmericInn</fullName>
                </value>
                <value>
                    <fullName>AmeriHost Inn</fullName>
                </value>
                <value>
                    <fullName>AmeriSuites</fullName>
                </value>
                <value>
                    <fullName>Andaz</fullName>
                </value>
                <value>
                    <fullName>Andel's</fullName>
                </value>
                <value>
                    <fullName>Angelo Hotels</fullName>
                </value>
                <value>
                    <fullName>Angsana Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>Aqua Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>ARAMARK</fullName>
                </value>
                <value>
                    <fullName>ARAMARK Conference Centers</fullName>
                </value>
                <value>
                    <fullName>Ascend Collection</fullName>
                </value>
                <value>
                    <fullName>ATAHOTELS</fullName>
                </value>
                <value>
                    <fullName>Auberge</fullName>
                </value>
                <value>
                    <fullName>Austria Trend Hotels</fullName>
                </value>
                <value>
                    <fullName>Autograph Collection (Marriott Affiliate)</fullName>
                </value>
                <value>
                    <fullName>Avani</fullName>
                </value>
                <value>
                    <fullName>Ayre Hoteles</fullName>
                </value>
                <value>
                    <fullName>Ayres Hotels</fullName>
                </value>
                <value>
                    <fullName>B4 Hotels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Changed_Brand_TO__c</fullName>
        <label>New Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accor</fullName>
                </value>
                <value>
                    <fullName>AC Hotels</fullName>
                </value>
                <value>
                    <fullName>AC Hotels by Marriott</fullName>
                </value>
                <value>
                    <fullName>Adagio</fullName>
                </value>
                <value>
                    <fullName>Adam's Mark Hotels</fullName>
                </value>
                <value>
                    <fullName>Affinia</fullName>
                </value>
                <value>
                    <fullName>African Pride Hotels</fullName>
                </value>
                <value>
                    <fullName>Allegro</fullName>
                </value>
                <value>
                    <fullName>All Seasons</fullName>
                </value>
                <value>
                    <fullName>aloft</fullName>
                </value>
                <value>
                    <fullName>a loft</fullName>
                </value>
                <value>
                    <fullName>Americas Best value Inn</fullName>
                </value>
                <value>
                    <fullName>AmericInn</fullName>
                </value>
                <value>
                    <fullName>AmeriHost Inn</fullName>
                </value>
                <value>
                    <fullName>AmeriSuites</fullName>
                </value>
                <value>
                    <fullName>Andaz</fullName>
                </value>
                <value>
                    <fullName>Andel's</fullName>
                </value>
                <value>
                    <fullName>Angelo Hotels</fullName>
                </value>
                <value>
                    <fullName>Angsana Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>Aqua Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>ARAMARK</fullName>
                </value>
                <value>
                    <fullName>ARAMARK Conference Centers</fullName>
                </value>
                <value>
                    <fullName>Ascend Collection</fullName>
                </value>
                <value>
                    <fullName>ATAHOTELS</fullName>
                </value>
                <value>
                    <fullName>Auberge</fullName>
                </value>
                <value>
                    <fullName>Austria Trend Hotels</fullName>
                </value>
                <value>
                    <fullName>Autograph Collection (Marriott Affiliate)</fullName>
                </value>
                <value>
                    <fullName>Avani</fullName>
                </value>
                <value>
                    <fullName>Ayre Hoteles</fullName>
                </value>
                <value>
                    <fullName>Ayres Hotels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Changed_Chain_From__c</fullName>
        <label>Old Chain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accor Hotels</fullName>
                </value>
                <value>
                    <fullName>AC Hotels</fullName>
                </value>
                <value>
                    <fullName>Adam's Mark Hotels</fullName>
                </value>
                <value>
                    <fullName>Affinia Hotels</fullName>
                </value>
                <value>
                    <fullName>aloft</fullName>
                </value>
                <value>
                    <fullName>AMResorts</fullName>
                </value>
                <value>
                    <fullName>ARAMARK</fullName>
                </value>
                <value>
                    <fullName>ARAMARK Conference Centers</fullName>
                </value>
                <value>
                    <fullName>ATAHOTELS</fullName>
                </value>
                <value>
                    <fullName>Auberge</fullName>
                </value>
                <value>
                    <fullName>Austria Trend Hotels</fullName>
                </value>
                <value>
                    <fullName>Autograph Collection (Marriott Affiliate)</fullName>
                </value>
                <value>
                    <fullName>Ayre Hoteles</fullName>
                </value>
                <value>
                    <fullName>Ayres Hotels</fullName>
                </value>
                <value>
                    <fullName>B4 Hotels</fullName>
                </value>
                <value>
                    <fullName>Banyan Tree Hotels</fullName>
                </value>
                <value>
                    <fullName>Barcelo Hotels</fullName>
                </value>
                <value>
                    <fullName>Belmond</fullName>
                </value>
                <value>
                    <fullName>Benchmark</fullName>
                </value>
                <value>
                    <fullName>Benchmark Hospitality</fullName>
                </value>
                <value>
                    <fullName>Benchmark Resorts &amp; Hotels</fullName>
                </value>
                <value>
                    <fullName>Best Western</fullName>
                </value>
                <value>
                    <fullName>Best Western Plus</fullName>
                </value>
                <value>
                    <fullName>Boscolo Hotels</fullName>
                </value>
                <value>
                    <fullName>Britannia Hotels</fullName>
                </value>
                <value>
                    <fullName>Caesars Entertainment</fullName>
                </value>
                <value>
                    <fullName>Carlson Rezidor Hotel Group</fullName>
                </value>
                <value>
                    <fullName>Cham Palaces</fullName>
                </value>
                <value>
                    <fullName>China Grill Management</fullName>
                </value>
                <value>
                    <fullName>Choice Hotels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Changed_Chain_TO__c</fullName>
        <label>New Chain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accor Hotels</fullName>
                </value>
                <value>
                    <fullName>AC Hotels</fullName>
                </value>
                <value>
                    <fullName>Adam's Mark Hotels</fullName>
                </value>
                <value>
                    <fullName>Affinia Hotels</fullName>
                </value>
                <value>
                    <fullName>aloft</fullName>
                </value>
                <value>
                    <fullName>AMResorts</fullName>
                </value>
                <value>
                    <fullName>ARAMARK</fullName>
                </value>
                <value>
                    <fullName>ARAMARK Conference Centers</fullName>
                </value>
                <value>
                    <fullName>ATAHOTELS</fullName>
                </value>
                <value>
                    <fullName>Auberge</fullName>
                </value>
                <value>
                    <fullName>Austria Trend Hotels</fullName>
                </value>
                <value>
                    <fullName>Autograph Collection (Marriott Affiliate)</fullName>
                </value>
                <value>
                    <fullName>Ayre Hoteles</fullName>
                </value>
                <value>
                    <fullName>Ayres Hotels</fullName>
                </value>
                <value>
                    <fullName>B4 Hotels</fullName>
                </value>
                <value>
                    <fullName>Banyan Tree Hotels</fullName>
                </value>
                <value>
                    <fullName>Barcelo Hotels</fullName>
                </value>
                <value>
                    <fullName>Belmond</fullName>
                </value>
                <value>
                    <fullName>Benchmark</fullName>
                </value>
                <value>
                    <fullName>Benchmark Hospitality</fullName>
                </value>
                <value>
                    <fullName>Benchmark Resorts &amp; Hotels</fullName>
                </value>
                <value>
                    <fullName>Best Western</fullName>
                </value>
                <value>
                    <fullName>Best Western Plus</fullName>
                </value>
                <value>
                    <fullName>Boscolo Hotels</fullName>
                </value>
                <value>
                    <fullName>Britannia Hotels</fullName>
                </value>
                <value>
                    <fullName>Caesars Entertainment</fullName>
                </value>
                <value>
                    <fullName>Carlson Rezidor Hotel Group</fullName>
                </value>
                <value>
                    <fullName>Cham Palaces</fullName>
                </value>
                <value>
                    <fullName>China Grill Management</fullName>
                </value>
                <value>
                    <fullName>Choice Hotels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Changed_Management_Company_To__c</fullName>
        <label>New Management Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_Supplier_Name_FROM__c</fullName>
        <label>Old Supplier Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_Supplier_Name_TO__c</fullName>
        <label>New Supplier Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed__c</fullName>
        <label>Old Management Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Expiry_Date__c</fullName>
        <label>Credit Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_ReFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer ReFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Reviewed__c</fullName>
        <label>Date Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Corrected_By__c</fullName>
        <label>Error Corrected By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Implementation Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_post_processing__c</fullName>
        <label>Error post processing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chain name not amended/incorrect.</fullName>
                </value>
                <value>
                    <fullName>Brand name not amended/Incorrect.</fullName>
                </value>
                <value>
                    <fullName>Management company not amended/incorrect.</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implementation_Comments__c</fullName>
        <label>Implementation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implemented_By__c</fullName>
        <label>Implemented By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Samridhi Rathi</fullName>
                </value>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                </value>
                <value>
                    <fullName>Tushar Vats</fullName>
                </value>
                <value>
                    <fullName>Payal Sharma (Finance)</fullName>
                </value>
                <value>
                    <fullName>Nikita Sawhney</fullName>
                </value>
                <value>
                    <fullName>Himani Talwar</fullName>
                </value>
                <value>
                    <fullName>Jiny Singh</fullName>
                </value>
                <value>
                    <fullName>Nidhi Thakur</fullName>
                </value>
                <value>
                    <fullName>Shajo Padikkal</fullName>
                </value>
                <value>
                    <fullName>Shefali Dewett</fullName>
                </value>
                <value>
                    <fullName>Kritika Chaturvedi</fullName>
                </value>
                <value>
                    <fullName>Abhilasha Jain</fullName>
                </value>
                <value>
                    <fullName>Paris Sharma</fullName>
                </value>
                <value>
                    <fullName>Virender Yadav</fullName>
                </value>
                <value>
                    <fullName>Avneet Kaur</fullName>
                    <isActive>false</isActive>
                    <label>Avneet Kaur</label>
                </value>
                <value>
                    <fullName>Disha Shah</fullName>
                    <isActive>false</isActive>
                    <label>Disha Shah</label>
                </value>
                <value>
                    <fullName>Himanshi Chawla</fullName>
                    <isActive>false</isActive>
                    <label>Himanshi Chawla</label>
                </value>
                <value>
                    <fullName>Rajeev Sahni</fullName>
                    <isActive>false</isActive>
                    <label>Rajeev Sahni</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing_Type__c</fullName>
        <label>Listing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>1/2 Diamond</fullName>
                </value>
                <value>
                    <fullName>1 Diamond</fullName>
                </value>
                <value>
                    <fullName>2 Diamond</fullName>
                </value>
                <value>
                    <fullName>3 Diamond</fullName>
                </value>
                <value>
                    <fullName>4 Diamond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Code__c</fullName>
        <label>MSA Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CSN_Listing_Type__c</fullName>
        <label>New Listing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>1/2 Diamond</fullName>
                </value>
                <value>
                    <fullName>1 Diamond</fullName>
                </value>
                <value>
                    <fullName>2 Diamond</fullName>
                </value>
                <value>
                    <fullName>3 Diamond</fullName>
                </value>
                <value>
                    <fullName>4 Diamond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Parent_Management_Company__c</fullName>
        <label>New Parent Management Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Supplier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Supp A/c</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reflag New A/c</relationshipLabel>
        <relationshipName>ReFlag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Venue_Code__c</fullName>
        <label>New Venue Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Listing_Type__c</fullName>
        <label>Old Listing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>1/2 Diamond</fullName>
                </value>
                <value>
                    <fullName>1 Diamond</fullName>
                </value>
                <value>
                    <fullName>2 Diamond</fullName>
                </value>
                <value>
                    <fullName>3 Diamond</fullName>
                </value>
                <value>
                    <fullName>4 Diamond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Parent_Management_Company__c</fullName>
        <label>Old Parent Management Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Supp_Ac__c</fullName>
        <label>Supp A/c</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reflag A/c</relationshipLabel>
        <relationshipName>Rebrand_Reflags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Old_Venue_Code__c</fullName>
        <label>Old Venue Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Company_Name__c</fullName>
        <label>Other Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reflag_Processed_Date__c</fullName>
        <label>Reflag Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reflag_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Change</fullName>
                </value>
                <value>
                    <fullName>Chain Change</fullName>
                </value>
                <value>
                    <fullName>Chain to Independent</fullName>
                </value>
                <value>
                    <fullName>Independent to Chain</fullName>
                </value>
                <value>
                    <fullName>Name Change</fullName>
                </value>
                <value>
                    <fullName>Management Company Change</fullName>
                </value>
                <value>
                    <fullName>Unique Venue Reflag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reflagged_on_Date__c</fullName>
        <label>Reflagged On Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restaurant_ReFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restaurant ReFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <label>Reviewed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Swati Gautam</fullName>
                </value>
                <value>
                    <fullName>Tanuj Shrivastava</fullName>
                </value>
                <value>
                    <fullName>Vishav Garg</fullName>
                </value>
                <value>
                    <fullName>Akriti Puri</fullName>
                </value>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Amrita Kaur</fullName>
                </value>
                <value>
                    <fullName>Sweta Nanda</fullName>
                </value>
                <value>
                    <fullName>Akash Tiwari</fullName>
                    <isActive>false</isActive>
                    <label>Akash Tiwari</label>
                </value>
                <value>
                    <fullName>Bishnu Singh</fullName>
                    <isActive>false</isActive>
                    <label>Bishnu Singh</label>
                </value>
                <value>
                    <fullName>Deepshikha Sharma</fullName>
                    <isActive>false</isActive>
                    <label>Deepshikha Sharma</label>
                </value>
                <value>
                    <fullName>Harish Arora</fullName>
                    <isActive>false</isActive>
                    <label>Harish Arora</label>
                </value>
                <value>
                    <fullName>Lalit Rawat</fullName>
                    <isActive>false</isActive>
                    <label>Lalit Rawat</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Comments__c</fullName>
        <label>Reviewer Comments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chain name not amended/incorrect.</fullName>
                </value>
                <value>
                    <fullName>Brand name not amended/Incorrect.</fullName>
                </value>
                <value>
                    <fullName>Management company not amended/incorrect.</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_s_Comments__c</fullName>
        <label>Reviewer’s Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Required__c</fullName>
        <description>Field Requested Under Case # 08667433. The purpose of creating this field is, we want to track productivity of the individual reviewer who is going to work on any object.</description>
        <label>Time Required</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ReFlag</label>
    <nameField>
        <displayFormat>Reflag#{0000}</displayFormat>
        <label>Rebrand/Reflag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReFlag</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Brand_Change_Type</fullName>
        <active>true</active>
        <label>Brand Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Change_and_Management_Company_Change</fullName>
        <active>true</active>
        <label>Brand Change and Management Company Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chain_Change</fullName>
        <active>true</active>
        <label>Chain Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chain_Change_and_Management_Company_Change</fullName>
        <active>true</active>
        <label>Chain Change and Management Company Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chain_to_Independent</fullName>
        <active>true</active>
        <label>Chain to Independent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chain_to_Independent_and_Management_Company_Change</fullName>
        <active>true</active>
        <label>Chain to Independent and Management Company Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Independent_to_Chain</fullName>
        <active>true</active>
        <label>Independent to Chain</label>
    </recordTypes>
    <recordTypes>
        <fullName>Independent_to_Chain_and_Management_Company_Change</fullName>
        <active>true</active>
        <label>Independent to Chain and Management Company Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Management_Company_Change</fullName>
        <active>true</active>
        <label>Management Company Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Name_Change</fullName>
        <active>true</active>
        <label>Name Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Name_Change_and_Management_Company_Change</fullName>
        <active>true</active>
        <label>Name Change and Management Company Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restaurant_ReFlag</fullName>
        <active>true</active>
        <label>Restaurant ReFlag</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_ReFlag</fullName>
        <active>true</active>
        <label>Service ReFlag</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unique_Venue_Reflag</fullName>
        <active>true</active>
        <label>Unique Venue Reflag</label>
    </recordTypes>
    <validationRules>
        <fullName>Cannot_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Reflagged_on_Date__c)</errorConditionFormula>
        <errorDisplayField>Reflagged_on_Date__c</errorDisplayField>
        <errorMessage>Please update the Official ReFlag Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Sf_Account</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK(New_Supplier_Account__r.Name),
RecordTypeId &lt;&gt; "0120000000097pM")</errorConditionFormula>
        <errorDisplayField>New_Supplier_Account__c</errorDisplayField>
        <errorMessage>Please update the New SF Account Name!</errorMessage>
    </validationRules>
</CustomObject>